syntax = "proto3";

option csharp_namespace = "GRpcNet5";

package example;

service Example {
  // Unary
  rpc UnaryCall (ExampleRequest) returns (ExampleResponse);

  // Server streaming
  rpc StreamingFromServer (ExampleRequest) returns (stream ExampleResponse);

  // Client streaming
  rpc StreamingFromClient (stream ExampleRequest) returns (ExampleResponse);

  // Bi-directional streaming
  rpc StreamingBothWays (stream ExampleRequest) returns (stream ExampleResponse);
}

message ExampleRequest {
  int32 pageIndex = 1;
  int32 pageSize = 2;
  bool isDescending = 3;
}

message ExampleResponse {
  ExampleRequest request = 1;
  repeated string titles = 2;
}
